--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-<head>
-<meta charset="utf-8"></meta>
-<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
-<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-<title>Login</title>
-
-<!-- Bootstrap  CSS -->
-<link href="css/bootstrap/bootstrap.css" th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet" />
-
-<!-- CSS customizado -->
-<link href="css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
-
-<!--[if lt IE 9]>
+   xmlns:th="http://www.thymeleaf.org"
+   xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+   <head>
+      <meta charset="utf-8"/>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <title>Login</title>
+      <!-- Bootstrap  CSS -->
+      <link href="css/bootstrap/bootstrap.css" th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet" />
+      <!-- CSS customizado -->
+      <link href="css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+      <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-
-<body>
-
-	<div class="container">
-		<a th:href="@{/dashboard}"><button class="btn btn-lg btn-primary btn-block" type="button">Login</button></a>
-	</div>
-	<!-- /container -->
-</body>
+      <![endif]-->
+   </head>
+   <body>
+      <div class="container">
+         <a th:href="@{/rotas}"><button class="btn btn-lg btn-primary btn-block" type="button">Ver Rotas</button></a>
+      </div>
+      <!-- /container -->
+   </body>
 </html>
-
