inserção do comando de logout que estava faltando nas telas de adicionar e de visualizar editar

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,14 +1,19 @@
+*{
+	margin: 0px;
+	padding: 0px;
+}
 body {
-  padding-top: 40px;
-  padding-bottom: 40px;
   background-color: #eee;
 }
 
-li{
+ul,li{
 	 list-style-type: none;
 }
-ul{
-	 list-style-type: none;
+strong{
+	font-size: 24px;
+}
+.logout{
+	float: right;
 }
 #divMap {
 	position: relative;
@@ -16,9 +21,12 @@ ul{
 	display: block;
 	height: 500px;
 	z-index: 0;
-	margin: 10px 0 60px 0;
+	margin: 10px 0 ;
 }
-
+.container{
+	background: #fff;
+	padding: 0 30px;
+}
 .form-signin {
   max-width: 400px;
   padding: 15px;
@@ -31,7 +39,7 @@ ul{
 .form-signin .checkbox {
   font-weight: normal;
 }
-.form-signin .form-control {
+.form-signin .form-control, .panel-body {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
@@ -39,17 +47,4 @@ ul{
           box-sizing: border-box;
   padding: 10px;
   font-size: 16px;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
 }
