--- a/src/main/resources/templates/rotaAdd.html
+++ b/src/main/resources/templates/rotaAdd.html
@@ -8,42 +8,38 @@
       <meta name="viewport" content="width=device-width" />
       <title>Cadastro de Rotas</title>
       <!-- Bootstrap  CSS -->
-      <link href="css/bootstrap/bootstrap.min.css" th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet" />
+      <link href="../static/css/bootstrap/bootstrap.min.css" th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet" />
       <!-- CSS customizado -->
-      <link href="css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+      <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
    </head>
    <body>
-      <div class="panel panel-default">
+      <div class="container">
          <div class="panel-heading">
             <strong>Cadastro de Rotas</strong>
-         </div>    
+         <form th:action="@{/logout}" class="logout" method="post">
+			<input class="btn btn-danger" type="submit" value="Logout" />
+		</form>
+		</div> 
          <div class="panel-body">
-            <form class="form-horizontal" th:object="${rota}" th:action="@{/saveRota}" method="POST" style="margin: 10px" onsubmit="return sendRoute()">
+            <form class="form-horizontal" th:object="${rota}" th:action="@{/saveRota}" method="POST"  onsubmit="return sendRoute()">
                <div class="form-group">
-	               <div class="form-group row">   
-    	              <div class="col-md-2" th:classappend="${#fields.hasErrors('name')}? 'has-error'">          	 	     
-                        <label>Nome da Rota</label> 
-                        <input id="nameRoute" type="text" class="form-control input-sm" th:field="${rota.name}" maxlength="150" placeholder="Nome da Rota"/>
+	               <div class="form-group">             	 	     
+                        <label for="nameRoute" class="control-label">Nome da Rota</label> 
+                        <input id="nameRoute" type="text" class="form-control" th:field="${rota.name}" maxlength="150" placeholder="Nome da Rota"/>
                      </div>
-                  </div>   
-                  <div class="form-group row">
-	              	<div class="col-md-2" th:classappend="${#fields.hasErrors('routeDate')}? 'has-error'">    		           
-                        <label>Data</label> 
-                        <input id="dateRoute" type="text" class="form-control input-sm" th:field="*{routeDate}" placeholder="dd/mm/aaaa"/>
-              	  	</div>
+                  <div class="form-group">
+                        <label for="dateRoute" class="control-label">Data</label> 
+                        <input id="dateRoute" type="text" class="form-control" th:field="*{routeDate}" placeholder="dd/mm/aaaa"/>
+                  </div>
+                  <div class="form-group ">
+                        <label for="vehicleId" class="control-label">Veículo ID</label> 
+                        <input id="vehicleId" type="number" min="1" class="form-control" th:field="*{vehicleId}" placeholder="XX"/>
                   </div>
                   <div class="form-group row">
-	                  <div class="col-md-2" th:classappend="${#fields.hasErrors('vehicleId')}? 'has-error'">              	
-                        <label>Veículo ID</label> 
-                        <input id="vehicleId" type="number" min="1" class="form-control input-sm" th:field="*{vehicleId}" placeholder="XX"/>
-                  	  </div>
-                  </div>
-                  <div class="form-group row">
-                     <div class="col-md-2" th:classappend="${#fields.hasErrors('routeDate')}? 'has-error'">
                         <label>Stops</label> 
                            <ul>
                               <li th:each="i : ${#numbers.sequence(0, 3)}" class="itemRow" >									
@@ -55,12 +51,11 @@
                                  <input th:id="${'stopLng-'+i}" type="hidden" th:field="*{stops[__${i}__].position.lng}"/>
                               </li>
                            </ul>
-                     </div>
                   </div>
                <div id="divMap"></div>
                </div>
 
-               <div class="form-group row">
+               <div class="form-group">
                   <button type="submit" class="btn btn-sm btn-primary">Salvar</button>
                   <a th:href="@{/}" class="btn btn-sm btn-default">Cancelar</a>
                </div>
@@ -69,8 +64,5 @@
       </div>
    </body>
    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	<script>
-
-	</script>
-	<script type="text/javascript" src="js/rotaAdd.js" th:src="@{/js/rotaAdd.js}"></script>
+   <script type="text/javascript" src="../static/js/rotaAdd.js" th:src="@{/js/rotaAdd.js}"></script>
 </html>
