--- a/src/main/resources/templates/rotaEdit.html
+++ b/src/main/resources/templates/rotaEdit.html
@@ -9,66 +9,49 @@
           
       <title>Editar Rota</title>
       <!-- Bootstrap  CSS -->
-      <link href="css/bootstrap/bootstrap.min.css" th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet" />
+      <link href="../static/css/bootstrap/bootstrap.min.css" th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet" />
       <!-- CSS customizado -->
-      <link href="css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+      <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
    </head>
-   <body>
-          
-      <div class="panel panel-default">
+   <body>          
+      <div class="container">
          <div class="panel-heading">
             <strong>Editar Rota</strong>
+         <form th:action="@{/logout}" class="logout" method="post">
+			<input class="btn btn-danger" type="submit" value="Logout" />
+		</form>
          </div>
          <div class="panel-body">
-            <form class="form-horizontal" th:object="${rota}" th:action="@{/save}" method="POST" style="margin: 10px" onsubmit="return sendRoute()">
+            <form class="form-horizontal" th:object="${rota}" th:action="@{/save}" method="POST" onsubmit="return sendRoute()">
                <div class="form-group">
-               <!-- <div class="form-group row">
-                        <div class="col-md-2" th:if="${#fields.hasAnyErrors()}">
-                           <div th:each="detailedError : ${#fields.detailedErrors()}">
-                              <span th:text="${detailedError.message}"></span>
-                           </div>
-                        </div>
-                     </div>-->
-                     <div class="form-group row">
-                        <div class="col-md-2">
-                           <input type="text" class="form-control input-sm" id="id" th:field="*{rota_id}" readOnly="readonly"/>
-                        </div>
+                      <input type="hidden" class="form-control input-sm" id="id" th:field="*{rota_id}" readOnly="readonly"/>
+                     <div class="form-group">
+                           <label for="nameRoute" class="control-label">Nome da Rota</label> 
+                           <input id="nameRoute" type="text" class="form-control" th:field="*{name}" maxlength="150" placeholder="Nome da Rota"/>
                      </div>
-                     <div class="form-group row">
-                   	 	<div class="col-md-2" th:classappend="${#fields.hasErrors('name')}? 'has-error'">
-                           <label>Nome da Rota</label> 
-                           <input id="nameRoute" type="text" class="form-control input-sm" th:field="*{name}" maxlength="150" placeholder="Nome da Rota"/>
-                    	 </div>
+                     <div class="form-group">
+                           <label for="dateRoute" class="control-label">Data</label> 
+                           <input id="dateRoute" type="text" class="form-control" th:field="*{routeDate}" placeholder="dd/mm/aaaa"/>
                      </div>
-                     <div class="form-group row">
-                	 	<div class="col-md-2" th:classappend="${#fields.hasErrors('routeDate')}? 'has-error'">
-                           <label>Data</label> 
-                           <input id="dateRoute" type="text" class="form-control input-sm" th:field="*{routeDate}" placeholder="dd/mm/aaaa"/>
-                		</div>
-                     </div>
-                    <div class="form-group row">
-                		<div class="col-md-2" th:classappend="${#fields.hasErrors('vehicleId')}? 'has-error'">
-	                        <label>Veículo ID</label> 
-	                        <input id="vehicleId" type="number" min="1" class="form-control input-sm" th:field="*{vehicleId}"/>
-	              	  	</div>
+                    <div class="form-group">
+	                        <label for="vehicleId" class="control-label">Veículo ID</label> 
+	                        <input id="vehicleId" type="number" min="1" class="form-control" th:field="*{vehicleId}"/>
                   	</div>	
                   	
                   	<script th:inline="javascript">
-	//<![CDATA[
- 
-        var markersAux =  [[*{stops}]];;
-    	//]]>
-    	</script>
-                     <div class="form-group row">
-                        <div class="col-md-2" th:classappend="${#fields.hasErrors('routeDate')}? 'has-error'">
-                           <label>Stops</label> 
+					//<![CDATA[
+			 
+			        var markersAux =  [[*{stops}]];;
+			    	//]]>
+			    	</script>
+                     <div class="form-group">
+                           <label class="control-label">Stops</label> 
                               <ul>
                                  <li th:each="item, stat : *{stops}" class="itemRow">
-                                      
                                        <input type="hidden" class="form-control quantity" name="name"
                                           th:field="*{stops[__${stat.index}__].name}" th:id="${'stopName-'+stat.index}"/>
                                        
@@ -79,18 +62,18 @@
                                           th:field="*{stops[__${stat.index}__].position.lng}" th:id="${'stopLng-'+stat.index}"/>
                                  </li>
                               </ul>
-                        </div>
                      </div>
                      <div id="divMap"></div>
                </div>
-               <div class="form-group row">
-                  <button type="submit" class="btn btn-sm btn-primary">Salvar</button>
-                  <a th:href="@{/rotas}" class="btn btn-sm btn-default">Cancelar</a>
+               <div class="form-group">
+                  <button type="submit" class="btn btn-primary">Salvar</button>
+                  <a th:href="@{/rotas}" class="btn btn-default">Cancelar</a>
                </div>
             </form>
+
          </div>
       </div>
    </body>
       <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script type="text/javascript" src="js/rotaEdit.js" th:src="@{/js/rotaEdit.js}"></script>
+<script type="text/javascript" src="../static/js/rotaEdit.js" th:src="@{/js/rotaEdit.js}"></script>
 </html>
