--- a/src/main/resources/templates/rotas.html
+++ b/src/main/resources/templates/rotas.html
@@ -8,9 +8,9 @@
       <meta name="viewport" content="width=device-width" />
       <title>Rotas</title>
       <!-- Bootstrap  CSS -->
-      <link href="css/bootstrap/bootstrap.min.css" th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet" />
+      <link href="../static/css/bootstrap/bootstrap.min.css" th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet" />
       <!-- CSS customizado -->
-      <link href="css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+      <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
